# amq-c-sample

./: CMakeLists.txt  README.md  consumer.cpp  producer.cpp
